# airship-vision

./: .gitignore~  flow_chart&class  main.cpp
HOG_SVM_train/: CMakeLists.txt  main.cpp
Linux系统/HdUsbCamera2.3/: .project  AndroidManifest.xml  HdUsbCamera2.3.apk  build.gradle
Linux系统/HdUsbCamera2.3/res/drawable/: img_button.xml  my_botton.xml  seekbar_style_own.xml
Linux系统/HdUsbCamera2.3/res/layout/: activity_main.xml  activity_two.xml  drawer_layout.xml  listview_item_expand.xml  listview_item_main.xml  listview_item_style.xml  record_layout.xml  solution_item.xml  status_layout.xml
Linux系统/HdUsbCamera2.3/res/layout-sw600dp/: activity_main.xml  activity_two.xml  listview_item_style.xml  status_layout.xml
Linux系统/HdUsbCamera2.3/res/values/: arrays.xml  color.xml  strings.xml
Linux系统/HdUsbCamera2.3/res/values-zh-rCN/: strings.xml
Linux系统/HdUsbCamera2.3/src/com/camera/hdusbcamera/: CameraPreview.java  MainActivity.java  RecordActivity.java  RecordExpandableAdapter.java  mCParam.java  mDBHelper.java  mDBManager.java
Linux系统/Linux系统/: luvcview说明.txt  说明.txt
car_detection_2018_5_1/: CMakeLists.txt  main.cpp
car_detection_2018_5_1/lib/: car_detection.h  ctrl_flag.h  road_detection.h
car_detection_2018_5_1/src/: car_detection.cpp  road_detection.cpp
lib/: function.h
moving detection/: CMakeLists.txt
moving detection/UML/: area_grow.mdj
moving detection/flowchart/: moving_catch.md
moving detection/lib/: inc.h  paramters.h
moving detection/src/: objects_detect.cpp
net_video_trans_static/client_fix_size_static/: CMakeLists.txt  main.cpp  parameters.h  push_image.cpp  push_image.h
net_video_trans_static/server_fix_size_static/: CMakeLists.txt  construction  get_image.cpp  get_image.h  main.cpp  parameters.h
src/: image_pre_process.cpp  mark_objects.cpp  objects_detect.cpp
video_get/: CMakeLists.txt  main.cpp
